@@ -54,7 +54,8 @@
 #' \url{http://bl.ocks.org/mbostock/1129492}.
 #' @param opacityNoHover numeric value of the opacity proportion for node labels 
 #' text when the mouse is not hovering over them
-#'
+#' @param clickAction A JavaScript expression to evaluate when a node is clicked
+#' 
 #' @examples
 #' #### Tabular data example.
 #' # Load data
@@ -105,6 +106,21 @@
 #'              Target = "target", Value = "value", NodeID = "name",
 #'              Group = "group", opacity = 0.4, bounded = TRUE,
 #'              opacityNoHover = TRUE)
+#'              
+#'              
+#' # Create graph with alert pop-up when a node is clicked.  You're 
+#' # unlikely to want to do exactly this, but you might use
+#' # Shiny.onInputChange() to allocate d.XXX to an element of input
+#' # for use in a Shiny app.
+#' MyClickScript <- 'alert("You clicked " + d.name + " which is in row " + 
+#'        (d.index + 1) +  " of your original R data frame");'
+#' forceNetwork(Links = MisLinks, Nodes = MisNodes, Source = "source",
+#'              Target = "target", Value = "value", NodeID = "name",
+#'              Group = "group", opacity = 1, zoom = F, bounded = T,
+#'              clickAction = MyClickScript)
+#'              
+#'              
+#'              
 #' }
 #'
 
@@ -137,7 +153,8 @@ forceNetwork <- function(Links,
                          zoom = FALSE,
                          legend = FALSE,
                          bounded = FALSE,
-                         opacityNoHover = 0)
+                         opacityNoHover = 0,
+                         clickAction = NULL)
 {
         # Hack for UI consistency. Think of improving.
         colourScale <- as.character(colourScale)
@@ -187,7 +204,8 @@ forceNetwork <- function(Links,
                 nodesize = nodesize,
                 radiusCalculation = radiusCalculation,
                 bounded = bounded,
-                opacityNoHover = opacityNoHover
+                opacityNoHover = opacityNoHover,
+                clickAction = clickAction
         )
 
         # create widget
